[BUGFIX] Fixed the border in dark mode on the heading on the domain checker v3.

--- a/assets/css/dashboard-css-2024.css
+++ b/assets/css/dashboard-css-2024.css
@@ -653,7 +653,7 @@ html[data-theme='dark'] body {
 }
 
 .dark-mode .card-header-services {
-    border:1px solid #333 !important;
+    border:1px solid #222 !important;
 }
 
 /* =================== Nexure Dashboard Grid Styles =================== */
